--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <main>
-        <section>
+        <section id="login">
             <div id="imagem">
-                [FOTO]
+                <!--[IMAGEM]-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as condifgurações no seu ambiente.</p>
-                [FORM]
+                <form action="#" method="post"></form>
             </div>
         </section>
     </main>
