--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
 </head>
 <body>
     <main>
@@ -17,7 +18,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as condifgurações no seu ambiente.</p>
-                <form action="#" method="post"></form>
+                <form action="#" method="post" autocomplete="on">
+                    <div class="campo">
+                        <i class="material-symbols-outlined">person</i>
+                        <input type="email" name="" id="" autocomplete="email" required maxlength="30">
+                        <label for="">Login</label>
+                    </div>
+                    <div class="campo">
+                        <i class="material-symbols-outlined">vpn_key</i>
+                        <input type="password" name="" id="" autocomplete="current-password" required minlength="8" maxlength="15" placeholder="sua senha">
+                        <label for="">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <button>Esqueci a senha</button><i class="material-symbols-outlined">mail</i>
+                </form>
             </div>
         </section>
     </main>
