Formatação de estilos do formulario

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <label for="">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <button>Esqueci a senha</button><i class="material-symbols-outlined">mail</i>
+                    <button class="forgotpassword">Esqueci a senha <i class="material-symbols-outlined">mail</i></button>
                 </form>
             </div>
         </section>
