Novos estilos de ícones e input

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <form action="#" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-symbols-outlined">person</i>
-                        <input type="email" name="" id="" autocomplete="email" required maxlength="30">
+                        <input type="email" name="" id="" autocomplete="email" required maxlength="30" placeholder="seu e-mail">
                         <label for="">Login</label>
                     </div>
                     <div class="campo">
